<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <TextView
        android:id="@+id/txtPageLabelHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_marginTop="@dimen/tom_margin"
        android:gravity="center"
        android:text="@string/welcomes"
        android:textColor="@color/white"
        android:textSize="@dimen/medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPageLabelHeading"
        android:gravity="center"
        android:text="@string/register_text"
        android:textColor="@color/white"
        android:textSize="@dimen/less_small"
        android:layout_marginTop="@dimen/text_top_margin"/>
    <TextView
        android:id="@+id/mandatory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPageLabelHeading"
        android:gravity="center"
        android:text="@string/mandatory"
        android:textColor="@color/colorRollover"
        android:textSize="@dimen/less_small"
        android:layout_marginTop="@dimen/text_top_margin"/>


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPageLabel"
        android:layout_marginTop="@dimen/less_normal"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/small" />

        <EditText
            android:id="@+id/editTextMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/more_smallest"
            android:paddingLeft="@dimen/more_smallest"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:theme="@style/EditTextTheme" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/less_small"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/small" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/white"
            android:theme="@style/EditTextTheme" />

        <TextView
            android:id="@+id/txtUngalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ungalbaaz_Name"
            android:layout_marginTop="@dimen/less_small"
            android:textColor="@color/white"
            android:textSize="@dimen/small" />

        <EditText
            android:id="@+id/ungalbazName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:theme="@style/EditTextTheme" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/higher"
            android:background="@drawable/selector_ready_to_ungal"
            android:onClick="prefromRegister" />
    </LinearLayout>
    <TextView android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <ImageView
        android:layout_width="match_parent"
        android:background="@drawable/bottom_border"
        android:layout_height="wrap_content" />
</LinearLayout>